--- a/index.html
+++ b/index.html
@@ -12,105 +12,125 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header id="header">
-      <img
-        id="header-img"
-        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-        alt="logo-img"
-        loading="lazy"
-      />
-      <nav id="nav-bar">
-        <ul>
-          <li><a class="nav-link" href="">Features</a></li>
-          <li><a class="nav-link" href="">How It Works</a></li>
-          <li><a class="nav-link" href="">Pricing</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="container-form">
-      <h3>Handcrafted, home-made masterpieces</h3>
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Enter your email address"
-        />
-        <button type="submit">GET STARTED</button>
-      </form>
-    </div>
-    <div class="container-features">
-      <div class="icon-materials">
-        <i></i>
-      </div>
-      <div class="text-materials">
-        <h3>Premium Materials</h3>
-        <p>
-          Our trombones use the shiniest brass which is sourced locally. This
-          will increase the longevity of your purchase.
-        </p>
-      </div>
-      <div class="icon-shipping">
-        <i></i>
-      </div>
-      <div class="text-shipping">
-        <h3>Fast Shipping</h3>
-        <p>
-          We make sure you recieve your trombone as soon as we have finished
-          making it. We also provide free returns if you are not satisfied.
-        </p>
-      </div>
-      <div class="icon-quality">
-        <i></i>
-      </div>
-      <div class="text-quality">
-        <h3>Quality Assurance</h3>
-        For every purchase you make, we will ensure there are no damages or
-        faults and we will check and test the pitch of your instrument.
-      </div>
-    </div>
-
-    <div class="container-video"></div>
-
-    <div class="container-pricing">
-      <div class="tenor-trombone">
-        <div class="title">TENOR TROMBONE</div>
-        <div class="price">$600</div>
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
+    <div class="container">
+      <header id="header">
+        <div class="image-logo">
+          <img
+            id="header-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+            alt="logo-img"
+            loading="lazy"
+          />
         </div>
-        <button class="select">SELECT</button>
-      </div>
-
-      <div class="bass-trombone">
-        <div class="title">BASS TROMBONE</div>
-        <div class="price">$900</div>
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
-        </div>
-        <button class="select">SELECT</button>
-      </div>
-
-      <div class="tenor-trombone">
-        <div class="title">VALVE TROMBONE</div>
-        <div class="price">$1200</div>
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
-        </div>
-        <button class="select">SELECT</button>
-      </div>
-    </div>
-    <div class="footer">
-      <div>
-        <nav id="nav-bar-footer">
+        <nav id="nav-bar">
           <ul>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#video-section">How It Works</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
           </ul>
         </nav>
-        <p>Copyright 2022, Original Trombones</p>
-      </div>
+      </header>
+      <section class="container-form">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Enter your email address"
+            required
+          />
+          <input type="submit" id="submit" value="GET STARTED" />
+        </form>
+      </section>
+
+      <section class="container-features" id="features">
+        <div class="icon-materials">
+          <i class="fa fa-3x fa-fire"></i>
+        </div>
+        <div class="text-materials">
+          <h3>Premium Materials</h3>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </div>
+        <div class="icon-shipping">
+          <i class="fa fa-3x fa-truck"></i>
+        </div>
+        <div class="text-shipping">
+          <h3>Fast Shipping</h3>
+          <p>
+            We make sure you recieve your trombone as soon as we have finished
+            making it. We also provide free returns if you are not satisfied.
+          </p>
+        </div>
+        <div class="icon-quality">
+          <i class="fa fa-3x fa-battery-full"></i>
+        </div>
+        <div class="text-quality">
+          <h3>Quality Assurance</h3>
+          <p>
+            For every purchase you make, we will ensure there are no damages or
+            faults and we will check and test the pitch of your instrument.
+          </p>
+        </div>
+      </section>
+
+      <section class="container-video" id="video-section">
+        <iframe
+          id="video"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+          title="Roman Carnival Overture Op. 9 for Five Trombones"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <section class="container-pricing" id="pricing">
+        <div class="tenor-trombone trombone">
+          <div class="title">TENOR TROMBONE</div>
+          <div class="price">$600</div>
+          <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
+          </div>
+          <button class="select">SELECT</button>
+        </div>
+
+        <div class="bass-trombone trombone">
+          <div class="title">BASS TROMBONE</div>
+          <div class="price">$900</div>
+          <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
+          </div>
+          <button class="select">SELECT</button>
+        </div>
+
+        <div class="tenor-trombone trombone">
+          <div class="title">VALVE TROMBONE</div>
+          <div class="price">$1200</div>
+          <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, fuga?
+          </div>
+          <button class="select">SELECT</button>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div>
+          <nav id="nav-bar-footer">
+            <ul>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <p>Copyright 2022, Original Trombones</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
